--- a/anmeldung/static/css/header.css
+++ b/anmeldung/static/css/header.css
@@ -437,7 +437,7 @@ width: 100px;
 left: 50%;
 position: relative;
 border: 1px solid rgba(0, 0, 0, 0.125);
-margin-top: -275px;
+margin-top: -385px;
 margin-left: -50px;
 }
 
